--- a/main.css
+++ b/main.css
@@ -1,3 +1,6 @@
+
+/* GLOBAL STYLES */
+
 body, html {
 	padding: 0;
 	margin: 0;
@@ -7,19 +10,44 @@ body {
 	background: black;
 }
 
-nav {
+* {
+	box-sizing: border-box;
+}
+
+a {
+	text-decoration: none;
+}
+
+#navbar {
 	width: 100%;
-	height: 40px;
+	margin: 0;
 }
 
 ul {
-	list-style-type: none;
+	list-style: none;
 	display: block;
 	background: green;
+	margin: 0;
 }
 
 li {
 	display: inline-block;
+	margin: 0;
+}
+
+#navbar a {
+	padding: 10px 10px;
+	margin: 0;
+	background: yellow;
+	display: inline-block;
+}
+
+#navbar a:hover {
+	color: blueviolet;
+}
+
+#navbar a:active {
+	color: pink;
 }
 
 #wrapper {
