--- a/main.css
+++ b/main.css
@@ -19,27 +19,24 @@ a {
 }
 
 #navbar {
-	width: 100%;
 	margin: 0;
+	padding: 0;
 }
 
-ul {
-	list-style: none;
-	display: block;
+#navbar ul {
+	list-style-type: none;
+	display: flex;
 	background: green;
 	margin: 0;
-}
-
-li {
-	display: inline-block;
-	margin: 0;
+	padding: 0;
 }
 
 #navbar a {
-	padding: 10px 10px;
-	margin: 0;
-	background: yellow;
-	display: inline-block;
+	background: red;
+	padding: 10px;
+}
+
+#navbar li {
 }
 
 #navbar a:hover {
