--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@ body, html {
 
 body {
 	background: black;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 * {
@@ -33,7 +34,7 @@ a {
 
 #navbar a {
 	background: red;
-	padding: 10px;
+	padding: 0.5rem;
 }
 
 #navbar li {
@@ -49,7 +50,21 @@ a {
 
 #wrapper {
 	margin: 0 auto;
-	width: 980px;
+	width: 80%;
 	background: white;
-	padding: 10px;
+	padding: 0.5rem;
+}
+
+#main {
+	display: flex;
+	background: peachpuff;
+	margin: 0 -0.5rem;
+}
+
+#main .col {
+	flex: 1;
+	background: white;
+	border: 1px solid black;
+	padding: 0.5rem;
+	margin: 0.5rem;
 }
