--- a/main.css
+++ b/main.css
@@ -7,8 +7,10 @@ body, html {
 }
 
 body {
-	background: black;
+	background: white;
 	font-family: Arial, Helvetica, sans-serif;
+	font-size: 16px;
+	
 }
 
 * {
@@ -19,52 +21,97 @@ a {
 	text-decoration: none;
 }
 
-#navbar {
-	margin: 0;
-	padding: 0;
+h1 {
+	font-size: 2.5rem;
+}
+
+h2 {
+	font-size: 2rem;
+}
+
+h3 {
+	font-size: 1.6rem;
+}
+
+h4 {
+	font-size: 1.3rem;
+}
+
+h5 {
+	font-size: 1.1rem;
+}
+
+h6 {
+	font-size: 1rem;
 }
 
 #navbar ul {
 	list-style-type: none;
 	display: flex;
-	background: green;
+	justify-content: center;
+	background: rgb(1, 1, 32);
 	margin: 0;
 	padding: 0;
 }
 
-#navbar a {
-	background: red;
-	padding: 0.5rem;
+#navbar ul li {
+	margin: 0;
 }
 
-#navbar li {
+#navbar a {
+	display: inline-block;
+	color: white;
+	font-weight: bold;
+	padding: 1rem 0.6rem;
 }
 
 #navbar a:hover {
-	color: blueviolet;
-}
-
-#navbar a:active {
-	color: pink;
+	color: #aaa;
 }
 
 #wrapper {
 	margin: 0 auto;
 	width: 80%;
 	background: white;
-	padding: 0.5rem;
+}
+
+header {
+	background: white;
+	padding: 2rem;
+}
+
+header h1 {
+	margin: 0;
+	text-align: center;
+	font-family: Georgia, 'Times New Roman', Times, serif;
+	
 }
 
 #main {
 	display: flex;
+	justify-content: space-evenly;
 	background: peachpuff;
-	margin: 0 -0.5rem;
+	min-height: 100vh;
 }
 
-#main .col {
-	flex: 1;
+#main .col{
 	background: white;
 	border: 1px solid black;
+	padding: 0 0.5rem;
+}
+
+#main .col:nth-of-type(1), 
+#main .col:nth-of-type(3) {
+	flex: 1.2;
+}
+
+#main .col:nth-of-type(2){
+	flex: 2;
+}
+
+footer {
+	background: rgb(1, 1, 32);
+	color: white;
+	margin: 0;
 	padding: 0.5rem;
-	margin: 0.5rem;
 }
